<resources>
    <string name="app_name" translatable="false">Calmind</string>
    <string name="welcome">Welcome</string>
    <string name="motivating_message">Your well-being is important; we are here for you.</string>
    <string name="get_started">Let\'s get started</string>
    <string name="privacy_notice">After beginning we need to take a test.\nData we collect: By completing the initial questionnaire, we collect basic info (age, education, interests) and responses about your emotional well-being to personalize your experience and suggest relevant activities.</string>
    <string name="what_are_your_hobbies">What are your hobbies?</string>
    <string name="what_is_your_name">What is your name?</string>
    <array name="hobbies">
        <item>Sports</item>
        <item>Reading</item>
        <item>Music</item>
        <item>Drawing</item>
        <item>Swimming</item>
    </array>
    <string name="schooling">Schooling</string>
    <array name="schooling_array">
        <item>Elementary School</item>
        <item>Secondary School</item>
        <item>High School</item>
    </array>
    <string name="how_older_you">How older you?</string>

    <!-- Stress Test -->
    <string name="test_header_1">Let me</string>
    <string name="test_header_2">GET TO KNOW YOU</string>
    <string name="test_card_1">Initial Form</string>
    <string name="test_card_2">Fearless</string>
    <string name="option_1">Never</string>
    <string name="option_2">Almost never</string>
    <string name="option_3">Sometimes</string>
    <string name="option_4">Often</string>
    <string name="option_5">Very often</string>
    <string name="btn_confirm">Confirm</string>

    <!-- Gratitude Journal -->
    <string name="journal_header_1">JOURNAL</string>
    <string name="journal_header_2"> </string> <!--not needed in English-->
    <string name="journal_header_3">GRATITUDE</string>
    <string name="journal_main_1">Tell me how you felt today</string>
    <string name="journal_content_hint">This is your space, write however you want</string>
    <string name="journal_footer">Earn stars</string>
    <string name="journal_btn_save">Save</string>

    <string-array name="questions">
        <!-- Stress -->
        <item>How often have you been upset because something happened unexpectedly?</item>
        <item>How often have you felt unable to control the important things in your life?</item>
        <item>How often have you felt nervous or stressed?</item>
        <item>How often have you successfully dealt with irritating life hassles?</item>
        <item>How often have you felt that you were effectively coping with important changes happening in your life?</item>
        <item>How often have you felt confident about your ability to handle your personal problems?</item>
        <item>How often have you felt that things were going your way?</item>
        <item>How often have you felt that you could not cope with all the things you had to do?</item>
        <item>How often have you been able to control the difficulties in your life?</item>
        <item>How often have you felt that you had everything under control?</item>
        <item>How often have you been angry because things that happened were outside of your control?</item>
        <item>How often have you found yourself thinking about all the things you still have to do?</item>
        <item>How often have you been able to control how you spend your time?</item>
        <item>How often have you felt that difficulties were piling up so high that you couldn’t overcome them?</item>
        <!-- Resilience -->
        <item>I can roll with the changes.</item>
        <item>How often have you felt unable to control the important things in your life?</item>
        <item>How often have you felt nervous or stressed?</item>
        <item>How often have you successfully dealt with irritating life hassles?</item>
        <item>How often have you felt that you were effectively coping with important changes happening in your life?</item>
        <item>How often have you felt confident about your ability to handle your personal problems?</item>
        <item>How often have you felt that things were going your way?</item>
        <item>How often have you felt that you could not cope with all the things you had to do?</item>
        <item>How often have you been able to control the difficulties in your life?</item>
        <item>How often have you felt that you had everything under control?</item>
    </string-array>

    <!-- Toast's -->
    <string name="invalid_answer">Choose an option</string>
    <string name="congratulations">Congratulations!</string>
    <string name="message_successfully">You have finished the test successfully, please swipe right to see your results</string>
    <string name="go">Let\'s Go!</string>
    <string name="stress_low">Whoa!\nYour results show you\'re handling things really well right now—that\'s awesome!</string>
    <string name="stress_medium">Hey, I see some things might feel a bit heavy right now</string>
    <string name="stress_high">It sounds like things might feel overwhelming right now</string>
    <string name="swipe_right">Swipe right</string>
    <string name="resilience_low">It looks like you might be facing some tough challenges right now. Remember, resilience is like a muscle that gets stronger with practice. We\'re here to help you build it step by step. Try our guided activities to start growing your inner strength!</string>
    <string name="resilience_middle">You have a good foundation of resilience! There’s always room to grow, and we can help you strengthen your skills even more. Explore our tools to handle challenges with greater confidence.</string>
    <string name="resilience_high">Wow, your resilience is impressive! You have strong skills to navigate challenges. Keep nurturing this superpower—our advanced resources can help you shine even brighter.</string>
    <string name="no_ptsd">Great news! Your results are good. Keep using our app to maintain your mental well-being—explore activities to stay strong and positive!</string>
    <string name="probable_ptsd">Your feelings are valid, and it’s okay to seek support. Consider talking to a trusted adult or mental health professional. Meanwhile, our app offers calming tools to help you cope—you’re not alone.</string>
    <string name="high_probable_ptsd">Please consider to reach out to a mental health professional or trusted adult soon—they can provide important support. Our app has emergency resources and calming exercises to help while you connect with them. You deserve care.</string>
    <string name="create_account">Let\'s create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_password_visibility">Change password visibility</string>
    <string name="unknown_error">Something went wrong, please try again</string>
    <string name="greeting_user">Welcome!</string>
    <string name="go_back">Go back</string>
    <string name="progress">Progress: %d days</string>
    <string name="look_for_an_article">Let\'s look up a new article!</string>
    <string name="gratitude_journal">Gratitude\nJournal</string>
    <string name="gratitude_journal_title">Gratitude Journal</string>
    <string name="meditation">Meditation</string>
    <string name="gratitude_journal_description">Every time you write in your gratitude journal, you add to your streak of days, allowing you to unlock fun games. Gratitude is associated with increased happiness, reduced depressive symptoms, and greater overall well-being.\nFeel free to write</string>
    <string name="how_do_you_feel">Tell me. How do you feel today?</string>
    <string name="what_do_you_think">What do you think?</string>
    <string name="user_exist">This user already exist, please sing in.</string>
    <string name="sing_in">Sing In</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="detected">Detected emotions</string>
</resources>