<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_bold"
            android:text="@string/test_header_1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_bold"
            android:text="@string/test_header_2"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_semi_bold"
                    android:text="@string/test_card_1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_xsmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_smile_beam_svgrepo_com" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_semi_bold"
                        android:text="@string/test_card_2"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_xsmall" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/test_img" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_background"
            android:fontFamily="@font/fredoka_medium"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xsmall"
            test:text="¿Con qué frecuencia ha estado afectado por algo que ha ocurrido inesperadamente?" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="20dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_medium"
                    android:text="@string/option_1"
                    android:textColor="@color/option1"
                    android:textSize="@dimen/text_size_xsmall" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_medium"
                    android:text="@string/option_2"
                    android:textColor="@color/option2"
                    android:textSize="@dimen/text_size_xsmall" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_medium"
                    android:text="@string/option_3"
                    android:textColor="@color/option3"
                    android:textSize="@dimen/text_size_xsmall" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_medium"
                    android:text="@string/option_4"
                    android:textColor="@color/option4"
                    android:textSize="@dimen/text_size_xsmall" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_medium"
                    android:text="@string/option_5"
                    android:textColor="@color/option5"
                    android:textSize="@dimen/text_size_xsmall" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>