<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_1"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_bottom_background"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_brain_svgrepo_com"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/journal_header_1"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/fredoka_semi_bold"
                    android:textSize="@dimen/text_size_large"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/journal_header_2"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/fredoka_semi_bold"
                    android:textSize="@dimen/text_size_medium"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="32dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_star_shine_svgrepo_com"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_bold"
            android:text="@string/journal_header_3"
            android:textAlignment="center"
            android:textColor="@color/peach_1"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_main_1"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/fredoka_semi_bold"
            android:textSize="@dimen/text_size_xsmall"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_question_mark_svgrepo_com"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edit_text_journal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:gravity="top"
            android:scrollbars="vertical"
            android:background="@drawable/rounded_background"
            android:padding="20dp"
            android:hint="@string/journal_content_hint">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:layout_weight="1"
                    android:src="@drawable/test_img"
                    />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_btn_1"
                    android:text="@string/journal_btn_save"
                    android:fontFamily="@font/fredoka_medium"
                    android:textColor="@color/white"
                    android:layout_margin="25dp"
                    android:elevation="16dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>